# multi-agent-temporal

./: README.md  pyproject.toml
examples/: interactive.py  oneoff.py  simple.py  slack.py
examples/customer_service/: README.md  agent.py  console.py  runner.py
examples/multi_agent_github/: README.md  agent.py  schemas.py  sys_prompt.py  tools.py
examples/multi_agent_slack/: agent.py  schemas.py
examples/multiagent_slack/: README.md  agent.py  schemas.py  test.py  tools.py
examples/single_agent_slack/: README.md  agent.py  agent_websocket.py  tools.py
examples/singleagent_slack/: agent.py  sys_prompt.py  tools.py
examples/slack/: agent.py  agent_websocket.py  sys_prompt.py  tools.py
libs/: helpers.py
libs/agent/: agent.py  tool.py  workflow.py
src/temporal/agent/: __init__.py  agent.py  console.py  llm_manager.py  runner.py  session.py  tool.py  tools_util.py  workflow.py
tests/unittests/libs/agent/: test_agent.py
tests/unittests/temporal/agent/: __init__.py  test_agent.py  test_llm_manager.py  test_runner.py
