[project]
name = "temporal-daf-poc"
version = "0.1.0"
description = "Temporal Durable Agent Framework POC"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "aioconsole>=0.8.1",
    "flit>=3.12.0",
    "inflection>=0.5.1",
    "slack-sdk>=3.35.0",
    "temporalio>=1.11.1",
    "vertexai>=1.71.1",
    "asyncio (>=3.4.3,<4.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "aiohttp (>=3.12.9,<4.0.0)",
    "rich>=14.0.0",
    "pygithub>=2.6.1",
]

[dependency-groups]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]

[tool.flit.sdist]
include = ['src/**/*', 'README.md', 'pyproject.toml', 'LICENSE']
exclude = ['src/**/*.sh']

[tool.flit.module]
name = "temporal.agent"

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]
